<?xml version="1.0" encoding="utf-8"?><!--
  ~ 筷字输入法 - 高效编辑需要又好又快的输入法
  ~ Copyright (C) 2025 Crazydan Studio <https://studio.crazydan.org>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with this program.
  ~ If not, see <https://www.gnu.org/licenses/lgpl-3.0.en.html#license-text>.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- useSimpleSummaryProvider 为 true 时，在标签下方将显示设置的值；
    iconSpaceReserved 为 false 时，左侧无图标时，将不做空白占位；
    -->
    <ListPreference
            app:key="theme"
            app:title="@string/label_preference_choose_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="follow_system"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    <ListPreference
            app:key="hand_mode"
            app:title="@string/label_preference_switch_hand_mode"
            app:entries="@array/hand_mode_entries"
            app:entryValues="@array/hand_mode_values"
            app:defaultValue="right"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
            app:key="enable_x_input_pad"
            app:title="@string/label_preference_enable_x_input_pad"
            app:iconSpaceReserved="false"
            app:summary="@string/desc_preference_enable_x_input_pad" />

    <SwitchPreferenceCompat
            app:key="adapt_desktop_swipe_up_gesture"
            app:title="@string/label_preference_adapt_desktop_swipe_up_gesture"
            app:iconSpaceReserved="false"
            app:summary="@string/desc_preference_adapt_desktop_swipe_up_gesture" />

    <PreferenceCategory
            app:key="preference_x_input_pad"
            app:title="@string/title_preference_x_input_pad"
            app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
                app:key="enable_latin_use_pinyin_keys_in_x_input_pad"
                app:title="@string/label_preference_enable_latin_use_pinyin_keys_in_x_input_pad"
                app:iconSpaceReserved="false"
                app:summary="@string/desc_preference_enable_latin_use_pinyin_keys_in_x_input_pad" />
    </PreferenceCategory>
</PreferenceScreen>
