<?xml version="1.0" encoding="utf-8"?><!--
  ~ 筷字输入法 - 高效编辑需要又好又快的输入法
  ~ Copyright (C) 2025 Crazydan Studio <https://studio.crazydan.org>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with this program.
  ~ If not, see <https://www.gnu.org/licenses/lgpl-3.0.en.html#license-text>.
  -->

<!-- 设置 android:layoutDirection="ltr" 可以固定布局方向，确保其不随父视图的布局方向而变化 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/bg_input_popup_quick_view">

    <!-- 选中框放在离手最远端，以避免误选或误删 -->
    <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/btn_tool_spacing" />

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="4dp"
            android:layoutDirection="ltr">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|start">

            <TextView
                    android:id="@+id/text_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text_type"
                    android:textSize="12sp"
                    android:alpha=".3" />

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:background="?attr/board_divider_color"
                    android:alpha=".2" />

            <TextView
                    android:id="@+id/created_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_created_at"
                    android:textSize="12sp"
                    android:alpha=".3" />
        </LinearLayout>

        <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:gravity="center_vertical|start"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="2" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

            <TextView
                    android:id="@+id/used_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_used_count"
                    android:textSize="12sp"
                    android:alpha=".3" />
        </LinearLayout>
    </LinearLayout>

    <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/board_divider_color"
            android:alpha=".2" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <TextView
                android:id="@+id/btn_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/btn_tool_spacing"
                android:text="@string/btn_paste"
                android:textColor="?attr/popup_input_quick_fg_color" />
    </LinearLayout>
</LinearLayout>
