<?xml version="1.0" encoding="utf-8"?><!--
  ~ 筷字输入法 - 高效编辑需要又好又快的输入法
  ~ Copyright (C) 2025 Crazydan Studio <https://studio.crazydan.org>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with this program.
  ~ If not, see <https://www.gnu.org/licenses/lgpl-3.0.en.html#license-text>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="?attr/app_bg_color">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:gravity="center_horizontal">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:srcCompat="@drawable/ic_logo" />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp">

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switcher"
                    android:layout_width="48dp"
                    android:layout_height="16dp" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guide_try_exercises"
                android:text="@string/btn_guide_try_exercises"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_width="256dp"
                android:layout_height="64dp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                app:backgroundTint="#9c27b0"
                android:textColor="@color/color_white"
                app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guide_feedback"
                android:text="@string/title_about_feedback"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_width="256dp"
                android:layout_height="64dp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                app:backgroundTint="#3395d4"
                android:textColor="@color/color_white"
                app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guide_show_donate"
                android:text="@string/btn_guide_show_donate"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_width="256dp"
                android:layout_height="64dp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                app:backgroundTint="#ff059669"
                android:textColor="@color/color_white"
                app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guide_show_preferences"
                android:text="@string/btn_guide_show_preferences"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_width="256dp"
                android:layout_height="64dp"
                android:gravity="center"
                app:backgroundTint="#1976d2"
                android:textColor="@color/color_white"
                app:cornerRadius="8dp" />

        <!--
        圆形按钮: https://stackoverflow.com/questions/58529593/how-to-create-a-circular-outlined-material-button-in-android#answer-58529735
        避免图标为白色: https://stackoverflow.com/questions/53461491/material-button-icon-is-showing-without-color#answer-55568056
        -->
        <!--<com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guide_feedback"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:backgroundTint="#ffea580c"
                app:icon="@drawable/ic_feedback"
                app:iconTint="@null"
                app:iconSize="28dp"
                app:iconGravity="textStart"
                android:padding="0dp"
                app:iconPadding="0dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:shapeAppearanceOverlay="@style/Theme.Kuaizi.Button.Circle" />-->
    </LinearLayout>
</LinearLayout>
